fixed z-index

--- a/game/app/client/views/css/style.css
+++ b/game/app/client/views/css/style.css
@@ -83,7 +83,7 @@ form {
 border-radius: 5px;
 top: 0;
 background: #000;
-z-index: 0;
+z-index: 3;
 } 
 
 form input {
